# Multi-Agentic-AI-Workshop

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: agent_basics.py  boot_smoke.py  check_aws.py  limits_retries.py  mcp_http_client.py  mcp_stdio_client.py  pattern_critic_editor.py  pattern_pipeline.py  pattern_router.py  tools_fundamentals.py  typed_output.py
src/models/: answer_schema.py
src/servers/: calc_http_server.py  calc_server.py
tests/: conftest.py  test_pipeline.py  test_router.py
